fix form__extras bug - align buttons in vertical center of inputs

--- a/src/scss/src/components/_form.scss
+++ b/src/scss/src/components/_form.scss
@@ -227,7 +227,7 @@
   }
 
   .form__extras, .form__action {
-    height: 100%;
+    height: $input-height-large;
   }
 
   .form__textarea {
